# kr_tag

./: Dockerfile  app.py  nohup.out  pyproject.toml  requirements.txt  test.py
src/: api.py
src/test/: develop_kr_tag_v.0.2.6.ipynb  develop_kr_tag_v.1.0.0.ipynb  develop_kr_tag_v.1.1.0.ipynb  kr_tag.txt
src/v1/: main.py  router.py
src/v1/resources/: gpt_cache copy 2.json  gpt_cache copy.json  gpt_cache.json  grammatical_items.json  place_nouns.json  pos_descriptions.json  quantity_nouns.json  time_nouns.json
src/v1/utils/: check_items.py  gpt_helper.py  kiwi_analyzer.py
