[tool.poetry]
name = "kr-tag"
version = "0.1.0"
description = ""
authors = ["eundata <tupce2@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "0.28.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
kiwipiepy = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
